# tts-batch-api-py

./: .copier-answers.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Containerfile  Dockerfile  README.md  mypy.ini  pyproject.toml  pytest.toml  renovate.json  ruff.toml
.claude/: settings.json
.devcontainer/: Containerfile  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: container-build-pr.yml  container-build-push.yml  docker-build-action.yml  python_code_quality.yml  release-please.yml
app/: config.py  initialize_voice_engine.py  logger.py  main.py  models.py
docs/: README.md  api-reference.md  architecture.md  deployment.md  development.md
integration/: __init__.py
scripts/: download_models.py
src/app/: __init__.py  audio_processing.py  cache.py  config.py  initialize_voice_engine.py  logger.py  main.py  models.py  schemas.py
src/tts_batch_api/: audio_processing.py  cache.py  config.py  initialize_voice_engine.py  main.py  models.py
tests/: test_synthesize_speech.py
