[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "app"
version = "5.0.1"
description = "The API offer simple text to speach functionality based on PIPER."
authors = [{ name = "stkr22", email = "stkr22@github.com" }]
readme = "README.md"
license = "GPL-3.0-only"
license-files = [
    "LICENSE",
]

keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

requires-python = ">=3.12,<3.14"
dependencies = [
    "piper-tts~=1.4.0",
    "fastapi[standard]~=0.128.0",
    "numpy",
    "onnxruntime~=1.23.2",
    "redis~=7.1.0",
    "scipy~=1.16.3",
    "pydantic-settings~=2.12.0",
]

[project.urls]
Homepage = "https://github.com/stkr22/tts-batch-api-py"
Repository = "https://github.com/stkr22/tts-batch-api-py"
Documentation = "https://github.com/stkr22/tts-batch-api-py/tree/main/docs"
Issues = "https://github.com/stkr22/tts-batch-api-py/issues"
Changelog = "https://github.com/stkr22/tts-batch-api-py/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "ruff~=0.14.14",
    "mypy~=1.19.1",
    "pytest~=9.0.2",
    "pytest-cov~=7.0.0",
    "pytest-xdist~=3.6.0",
    "httpx~=0.28.1",
    "scipy-stubs>=1.16.0.2",
]
